--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@headlessui/react": "^2.0.4",
     "@nextui-org/react": "^2.4.1",
     "axios": "^1.7.2",
+    "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
   },
