--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/*.js", "use": "@vercel/node" },
-      { "src": "frontend/package.json", "use": "@vercel/static-build" }
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "handle": "filesystem" },
-      { "src": "/api/(.*)", "dest": "backend/api/$1.js" },
-      { "src": "/(.*)", "dest": "frontend/$1" }
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+       
     ]
-  }
-  
+}
