--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://abhishekpanwarcseiot2022:5625panwar@communify.megzlbm.mongodb.net/
+BASE_URL=http://localhost:5173
