--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=4000
 MONGO_URI=mongodb+srv://abhishekpanwarcseiot2022:5625panwar@communify.megzlbm.mongodb.net/
+# NODE_ENV=production
 # BASE_URL=http://localhost:5173
-NODE_ENV=production
