--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,12 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
+      { "src": "api/**/*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
+      { "src": "/api/v1/user", "dest": "/api/user.js" },
+      { "src": "/api/v1/posts", "dest": "/api/posts.js" },
+      { "src": "/api/v1/contact", "dest": "/api/contact.js" }
     ]
   }
   
