--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -21,9 +20,11 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
