refactor: Remove unused files and update backend and frontend configurations for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=4000
 MONGO_URI=mongodb+srv://abhishekpanwarcseiot2022:5625panwar@communify.megzlbm.mongodb.net/
+SESSION_SECRET=secret
 # NODE_ENV=production
 # BASE_URL=http://localhost:5173
