--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node index.js",
-    "start": "node index.js"
+    "dev": "node server.js",
+    "start": "node server.js",
+    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend && npm install"
   },
   "keywords": [],
   "author": "",
